--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,6 @@
 #Grails Metadata file
-#Mon Oct 21 13:25:12 CDT 2013
-app.grails.version=2.3.0
+#Mon Oct 21 14:31:42 CDT 2013
+app.grails.version=2.3.1
 app.name=skmanager
+app.servlet.version=3.0
 app.version=0.7
