--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Fri Oct 25 11:05:59 CDT 2013
+#Fri Oct 25 14:36:03 CDT 2013
 app.grails.version=2.3.1
 app.name=skmanager
 app.servlet.version=3.0
-app.version=0.10
+app.version=1.0b
