--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 #Grails Metadata file
-#Tue Oct 29 11:32:09 CDT 2013
-app.grails.version=2.3.1
+#Thu Nov 21 14:16:07 CST 2013
+app.grails.version=2.3.2
 app.name=skmanager
 app.servlet.version=3.0
 app.version=1.0.1b
